kubernetes/clusters/home-k3s/apps/observability/victoria-metrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: victoriametrics.png
    gethomepage.dev/name: VictoriaMetrics
    gethomepage.dev/group: Observability
    gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
spec:
  hostnames: ["metrics.${INTERNAL_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-stack
          namespace: observability
          port: 8428
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: alertmanager.png
    gethomepage.dev/name: AlertManager
    gethomepage.dev/group: Observability
spec:
  hostnames: ["alertmanager.${INTERNAL_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-stack
          namespace: observability
          port: 9093
